Try fixing the button iOS

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ input[type="button"] {
     -moz-appearance: none;
     appearance: none;
     color: #000 !important;
+    font-size: .875rem;
 }
 .botao {
     background-color: #2C7A5B;
